@@ -21,11 +21,13 @@
         <item>file</item>
         <item>partition</item>
         <item>directory</item>
+        <item>custom</item>
     </string-array>
     <string-array name="deploytype_entries">
         <item>File</item>
         <item>Partition</item>
         <item>Directory</item>
+        <item>Custom</item>
     </string-array>
     <string-array name="fstype_values" translatable="false">
         <item>auto</item>
@@ -73,7 +75,7 @@
         <item>opensuse</item>
         <item>kali</item>
         <item>gentoo</item>
-        <item>custom</item>
+        <item>rootfs</item>
     </string-array>
     <string-array name="distribution_entries" translatable="false">
         <item>Debian</item>
